--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
                         Зареєструйся на курс до відкриття школи <br>
                         та отримай знижку
                     </p>
-                    <div class="main__button"><a onclick="openModal('registration')" class="button btn-adaptive">Отримати знижку 15%</a></div>
+                    <div class="main__button"><a onclick="openModal('getDiscount')" class="button btn-adaptive info-button">Отримати знижку 15%</a></div>
                 </div>
-                <img src="images/character.svg" alt="Character">
+                <div class="character"><img src="images/character.svg" alt="Character"></div>
             </div>
         </main>
     </div>
@@ -78,46 +78,38 @@
                     <h1 class="action__title">А тепер просто натисність кнопку справа :)</h1>
                     <p class="action__subtitle">Більше датільнішої інформації у нас в <a href="" class="action__subtitle__link">instagram</a></p>
                 </div>
-                <div class="button"><a onclick="openModal('registration')" class=" btn-adaptive">Отримати знижку 15%</a></div>
+                <div class="button"><a onclick="openModal('getDiscount')" class=" btn-adaptive">Отримати знижку 15%</a></div>
             </div>
         </div>
     </div>
     <footer>Favorite English 2024</footer>
         <!-- Модальне вікно реєстрації -->
-        <div id="registration" class="modal" data-modal="registration">
+        <div id="getDiscount" class="modal" data-modal="getDiscount">
             <div class="modal-content">
-                <span class="close" onclick="closeModal('registration')"><ion-icon name="close-outline"></ion-icon></span>
+                <span class="close" onclick="closeModal('getDiscount')"><ion-icon name="close-outline"></ion-icon></span>
                 <h2>Отримання знижки</h2>
                 <div class="modal-inputs">
                     <input type="text" placeholder="Ім'я" required>
                     <input type="email" placeholder="Email" required>
                     <fieldset>
-                        <div class="form-button">
-                            <div class="button-group">
-                                <input type="radio" id="A1" name="frameworks" checked="" />
-                                <label for="A1">A1</label>
-                            </div>
+                        <div class="radio-group">
+                            <input type="radio" id="A1" name="frameworks" checked="" />
+                            <label for="A1">A1</label>
                         </div>
 
-                        <div class="form-button">
-                            <div class="button-group">
-                                <input type="radio" id="A2" name="frameworks" />
-                                <label for="A2">A2</label>
-                            </div>
+                        <div class="radio-group">
+                            <input type="radio" id="A2" name="frameworks" />
+                            <label for="A2">A2</label>
                         </div>
 
-                        <div class="form-button">
-                            <div class="button-group">
-                                <input type="radio" id="B1" name="frameworks" />
-                                <label for="B1">B1</label>
-                            </div>
+                        <div class="radio-group">
+                            <input type="radio" id="B1" name="frameworks" />
+                            <label for="B1">B1</label>
                         </div>
 
-                        <div class="form-button">
-                            <div class="button-group">
-                                <input type="radio" id="B2" name="frameworks" />
-                                <label for="B2">B2</label>
-                            </div>
+                        <div class="radio-group">
+                            <input type="radio" id="B2" name="frameworks" />
+                            <label for="B2">B2</label>
                         </div>
                     </fieldset>
 
