--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Favorite English — подача заявки</title>
     <link rel="stylesheet" href="styles/style.css">
 </head>
+
 <body>
     <div class="container">
         <header>
@@ -33,7 +35,8 @@
                         Зареєструйся на курс до відкриття школи <br>
                         та отримай знижку
                     </p>
-                    <div class="main__button"><a onclick="openModal('getDiscount')" class="button btn-adaptive info-button">Отримати знижку 15%</a></div>
+                    <div class="main__button"><a onclick="openModal('getDiscount')"
+                            class="button btn-adaptive info-button">Отримати знижку 15%</a></div>
                 </div>
                 <div class="character"><img src="images/character.svg" alt="Character"></div>
             </div>
@@ -46,28 +49,32 @@
                     <img src="images/work.svg" alt="Work">
                     <span class="slide__title"> Англійська для роботи</span>
                 </div>
-                <p class="slide__subtitle">Опануєш ділову лексику, зможеш читати англомовні джерела та легко порозумієшся з іноземними колегами</p>
+                <p class="slide__subtitle">Опануєш ділову лексику, зможеш читати англомовні джерела та легко
+                    порозумієшся з іноземними колегами</p>
             </div>
             <div class="slide">
                 <div class="slide__content">
                     <img src="images/speak.svg" alt="Speak">
                     <span class="slide__title">Розмовний курс</span>
                 </div>
-                <p class="slide__subtitle">Мінімум теорії, максимум практики та a bunch of topics на будь-який випадок. Все це допоможе швидко подолати мовний бар’єр</p>
+                <p class="slide__subtitle">Мінімум теорії, максимум практики та a bunch of topics на будь-який випадок.
+                    Все це допоможе швидко подолати мовний бар’єр</p>
             </div>
             <div class="slide">
                 <div class="slide__content">
                     <img src="images/chick.svg" alt="Chick">
                     <span class="slide__title">Англійська для початківців</span>
                 </div>
-                <p class="slide__subtitle">База-основа-фундамент, щоб опанувати базову граматику та підтримувати прості побутові розмови</p>
+                <p class="slide__subtitle">База-основа-фундамент, щоб опанувати базову граматику та підтримувати прості
+                    побутові розмови</p>
             </div>
             <div class="slide">
                 <div class="slide__content">
                     <img src="images/chick.svg" alt="Chick">
                     <span class="slide__title">Англійська для початківців</span>
                 </div>
-                <p class="slide__subtitle">База-основа-фундамент, щоб опанувати базову граматику та підтримувати прості побутові розмови</p>
+                <p class="slide__subtitle">База-основа-фундамент, щоб опанувати базову граматику та підтримувати прості
+                    побутові розмови</p>
             </div>
         </div>
     </section>
@@ -76,55 +83,58 @@
             <div class="action-info">
                 <div class="action-content">
                     <h1 class="action__title">А тепер просто натисність кнопку справа :)</h1>
-                    <p class="action__subtitle">Більше датільнішої інформації у нас в <a href="" class="action__subtitle__link">instagram</a></p>
+                    <p class="action__subtitle">Більше датільнішої інформації у нас в <a href=""
+                            class="action__subtitle__link">instagram</a></p>
                 </div>
-                <div class="button"><a onclick="openModal('getDiscount')" class=" btn-adaptive">Отримати знижку 15%</a></div>
+                <div class="button"><a onclick="openModal('getDiscount')" class=" btn-adaptive">Отримати знижку 15%</a>
+                </div>
             </div>
         </div>
     </div>
     <footer>Favorite English 2024</footer>
-        <!-- Модальне вікно реєстрації -->
-        <div id="getDiscount" class="modal" data-modal="getDiscount">
-            <div class="modal-content">
-                <span class="close" onclick="closeModal('getDiscount')"><ion-icon name="close-outline"></ion-icon></span>
-                <h2>Отримання знижки</h2>
-                <div class="modal-inputs">
-                    <input type="text" placeholder="Ім'я" required>
-                    <input type="email" placeholder="Email" required>
-                    <fieldset>
-                        <div class="radio-group">
-                            <input type="radio" id="A1" name="frameworks" checked="" />
-                            <label for="A1">A1</label>
-                        </div>
-
-                        <div class="radio-group">
-                            <input type="radio" id="A2" name="frameworks" />
-                            <label for="A2">A2</label>
-                        </div>
-
-                        <div class="radio-group">
-                            <input type="radio" id="B1" name="frameworks" />
-                            <label for="B1">B1</label>
-                        </div>
-
-                        <div class="radio-group">
-                            <input type="radio" id="B2" name="frameworks" />
-                            <label for="B2">B2</label>
-                        </div>
-                    </fieldset>
-
-                </div>
-                <div class="modal__bottom-section">
-                    <div class="unknown-section">
-                        <div class="unknown-level"><a href="#">Не знаю свого рівня</a></div>
-                        <div class="back-button">
-                            <a href="" class="unknown-back">← Назад</a>
-                        </div>
+    <!-- Модальне вікно реєстрації -->
+    <div id="getDiscount" class="modal" data-modal="getDiscount">
+        <div class="modal-content">
+            <span class="close" onclick="closeModal('getDiscount')"><ion-icon name="close-outline"></ion-icon></span>
+            <h2>Отримання знижки</h2>
+            <div class="modal-inputs">
+                <input type="text" placeholder="Ім'я" required>
+                <input type="email" placeholder="Email" required>
+                <fieldset>
+                    <div class="radio-group">
+                        <input type="radio" id="A1" name="frameworks" checked="" />
+                        <label for="A1">A1</label>
                     </div>
-                    <a href="" class="button modal-button">Отримати знижку</a>
+
+                    <div class="radio-group">
+                        <input type="radio" id="A2" name="frameworks" />
+                        <label for="A2">A2</label>
+                    </div>
+
+                    <div class="radio-group">
+                        <input type="radio" id="B1" name="frameworks" />
+                        <label for="B1">B1</label>
+                    </div>
+
+                    <div class="radio-group">
+                        <input type="radio" id="B2" name="frameworks" />
+                        <label for="B2">B2</label>
+                    </div>
+                </fieldset>
+
+            </div>
+            <div class="modal__bottom-section">
+                <div class="unknown-section">
+                    <div class="unknown-level"><a href="#">Не знаю свого рівня</a></div>
+                    <div class="back-button">
+                        <a href="" class="unknown-back">← Назад</a>
+                    </div>
                 </div>
+                <a href="" class="button modal-button">Отримати знижку</a>
             </div>
         </div>
+    </div>
     <script src="js/index.js"></script>
 </body>
+
 </html>
