--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
                         Зареєструйся на курс до відкриття школи <br>
                         та отримай знижку
                     </p>
-                    <div class="main__button"><a onclick="openModal('getDiscount')"class="button btn-adaptive info-button">Отримати знижку 15%</a></div>
+                    <div class="main__button"><a onclick="openModal('getDiscount')"
+                            class="button btn-adaptive info-button">Отримати знижку 15%</a></div>
                 </div>
                 <div class="character"><img src="images/character.svg" alt="Character"></div>
             </div>
