--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Favorite English — подача заявки</title>
     <link rel="stylesheet" href="styles/style.css">
+    <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 </head>
 
 <body>
@@ -101,24 +103,25 @@
                 <input type="text" placeholder="Ім'я" required>
                 <input type="email" placeholder="Email" required>
                 <fieldset>
-                    <div class="radio-group">
+                    <div class="button-group">
                         <input type="radio" id="A1" name="frameworks" checked="" />
                         <label for="A1">A1</label>
                     </div>
-
-                    <div class="radio-group">
+                    <div class="button-group">
                         <input type="radio" id="A2" name="frameworks" />
                         <label for="A2">A2</label>
                     </div>
-
-                    <div class="radio-group">
+                    <div class="button-group">
                         <input type="radio" id="B1" name="frameworks" />
                         <label for="B1">B1</label>
                     </div>
-
-                    <div class="radio-group">
+                    <div class="button-group">
                         <input type="radio" id="B2" name="frameworks" />
                         <label for="B2">B2</label>
+                    </div>
+                    <div class="button-group">
+                        <input type="radio" id="C1" name="frameworks" />
+                        <label for="C1">C1</label>
                     </div>
                 </fieldset>
 
