fix action button

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                     <p class="action__subtitle">Більше датільнішої інформації у нас в <a href=""
                             class="action__subtitle__link">instagram</a></p>
                 </div>
-                <div class="button"><a onclick="openModal('getDiscount')" class=" btn-adaptive">Отримати знижку 15%</a>
+                <div class="button action__button"><a onclick="openModal('getDiscount')" class=" btn-adaptive">Отримати знижку 15%</a>
                 </div>
             </div>
         </div>
