--- a/index.html
+++ b/index.html
@@ -70,6 +70,13 @@
                 <p class="slide__subtitle">База-основа-фундамент, щоб опанувати базову граматику та підтримувати прості
                     побутові розмови</p>
             </div>
+            <div class="slide">
+                <div class="slide__content">
+                    <img src="images/tree.svg" alt="Tree">
+                    <span class="slide__title">Англійська для подорожей</span>
+                </div>
+                <p class="slide__subtitle">Легкість у спілкуванні за кордоном: базові фрази, необхідні для аеропорту, готелю та ресторану.</p>
+            </div>
         </div>
     </section>
     <div class="container">
