--- a/index.html
+++ b/index.html
@@ -6,8 +6,32 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Favorite English — подача заявки</title>
     <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="styles.css" media="print" onload="this.media='all'">
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
+    <style>
+        /* Подключение шрифта Raleway локально */
+        @font-face {
+            font-family: 'Raleway';
+            font-style: normal;
+            font-weight: 400;
+            src: url('/fonts/raleway-400.woff2') format('woff2'), 
+                 url('/fonts/raleway-400.ttf') format('truetype');
+        }
+        @font-face {
+            font-family: 'Raleway';
+            font-style: normal;
+            font-weight: 700;
+            src: url('/fonts/raleway-700.woff2') format('woff2'), 
+                 url('/fonts/raleway-700.ttf') format('truetype');
+        }
+        
+        /* Пример критических стилей */
+        body {
+            margin: 0;
+            font-family: 'Raleway', sans-serif;
+        }
+        </style>
 </head>
 
 <body>
@@ -15,7 +39,7 @@
         <header>
             <nav>
                 <div class="logo">
-                    <img src="images/logo.svg" alt="Logo">
+                    <img src="images/logo.svg" loading="lazy" alt="Logo">
                     <span>FAVORITE ENGLISH</span>
                 </div>
                 <div class="socials">
@@ -38,9 +62,9 @@
                         та отримай знижку
                     </p>
                     <div class="main__button"><a onclick="openModal('getDiscount')"
-                            class="button btn-adaptive info-button">Отримати знижку 15%</a></div>
+                    class="button btn-adaptive info-button">Отримати знижку 15%</a></div>
                 </div>
-                <div class="character"><img src="images/character.svg" alt="Character"></div>
+                <div class="character"><img src="images/character.svg" loading="lazy" alt="Character"></div>
             </div>
         </main>
     </div>
@@ -48,7 +72,7 @@
         <div class="slider-track">
             <div class="slide">
                 <div class="slide__content">
-                    <img src="images/work.svg" alt="Work">
+                    <img src="images/work.svg" loading="lazy" alt="Work">
                     <span class="slide__title"> Англійська для роботи</span>
                 </div>
                 <p class="slide__subtitle">Опануєш ділову лексику, зможеш читати англомовні джерела та легко
@@ -56,7 +80,7 @@
             </div>
             <div class="slide">
                 <div class="slide__content">
-                    <img src="images/speak.svg" alt="Speak">
+                    <img src="images/speak.svg" loading="lazy" alt="Speak">
                     <span class="slide__title">Розмовний курс</span>
                 </div>
                 <p class="slide__subtitle">Мінімум теорії, максимум практики та a bunch of topics на будь-який випадок.
@@ -64,7 +88,7 @@
             </div>
             <div class="slide">
                 <div class="slide__content">
-                    <img src="images/chick.svg" alt="Chick">
+                    <img src="images/chick.svg" loading="lazy" alt="Chick">
                     <span class="slide__title">Англійська для початківців</span>
                 </div>
                 <p class="slide__subtitle">База-основа-фундамент, щоб опанувати базову граматику та підтримувати прості
@@ -72,7 +96,7 @@
             </div>
             <div class="slide">
                 <div class="slide__content">
-                    <img src="images/tree.svg" alt="Tree">
+                    <img src="images/tree.svg" loading="lazy" alt="Tree">
                     <span class="slide__title">Англійська для подорожей</span>
                 </div>
                 <p class="slide__subtitle">Легкість у спілкуванні за кордоном: базові фрази, необхідні для аеропорту, готелю та ресторану.</p>
@@ -136,7 +160,7 @@
             </div>
         </div>
     </div>
-    <script src="js/index.js"></script>
+    <script src="js/index.js" defer></script>
 </body>
 
 </html>
