Add images optimisation

--- a/index.html
+++ b/index.html
@@ -39,12 +39,12 @@
         <header>
             <nav>
                 <div class="logo">
-                    <img src="images/logo.svg" loading="lazy" alt="Logo">
+                    <img src="images/logo.svg" loading="lazy" alt="Logo" style="width: 76px; height: 76px;">
                     <span>FAVORITE ENGLISH</span>
                 </div>
                 <div class="socials">
-                    <a href="https://www.instagram.com/favorite.english.school/"><img src="images/Instagram.svg" alt="Instagram"></a>
-                    <a href="https://www.tiktok.com/@favorite.english.school"><img src="images/TikTok.svg" alt="TikTok"></a>
+                    <a href="https://www.instagram.com/favorite.english.school/"><img src="images/Instagram.svg" alt="Instagram" style="width: 35px; height: 36px;"></a>
+                    <a href="https://www.tiktok.com/@favorite.english.school"><img src="images/TikTok.svg" alt="TikTok" style="width: 35px; height: 36px;"></a>
                 </div>
             </nav>
         </header>
@@ -72,7 +72,7 @@
         <div class="slider-track">
             <div class="slide">
                 <div class="slide__content">
-                    <img src="images/work.svg" loading="lazy" alt="Work">
+                    <img src="images/work.svg" loading="lazy" alt="Work" style="width: 29px; height: 30px;">
                     <span class="slide__title"> Англійська для роботи</span>
                 </div>
                 <p class="slide__subtitle">Опануєш ділову лексику, зможеш читати англомовні джерела та легко
@@ -80,7 +80,7 @@
             </div>
             <div class="slide">
                 <div class="slide__content">
-                    <img src="images/speak.svg" loading="lazy" alt="Speak">
+                    <img src="images/speak.svg" loading="lazy" alt="Speak" style="width: 26px; height: 26px;">
                     <span class="slide__title">Розмовний курс</span>
                 </div>
                 <p class="slide__subtitle">Мінімум теорії, максимум практики та a bunch of topics на будь-який випадок.
@@ -88,7 +88,7 @@
             </div>
             <div class="slide">
                 <div class="slide__content">
-                    <img src="images/chick.svg" loading="lazy" alt="Chick">
+                    <img src="images/chick.svg" loading="lazy" alt="Chick" style="width: 28px; height: 28px;">
                     <span class="slide__title">Англійська для початківців</span>
                 </div>
                 <p class="slide__subtitle">База-основа-фундамент, щоб опанувати базову граматику та підтримувати прості
@@ -96,7 +96,7 @@
             </div>
             <div class="slide">
                 <div class="slide__content">
-                    <img src="images/tree.svg" loading="lazy" alt="Tree">
+                    <img src="images/tree.svg" loading="lazy" alt="Tree" style="width: 28px; height: 29px;">
                     <span class="slide__title">Англійська для подорожей</span>
                 </div>
                 <p class="slide__subtitle">Легкість у спілкуванні за кордоном: базові фрази, необхідні для аеропорту, готелю та ресторану.</p>
