--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                     <div class="main__button"><a onclick="openModal('getDiscount')"
                     class="button btn-adaptive info-button">Отримати знижку 15%</a></div>
                 </div>
-                <div class="character"><img src="images/character.svg" loading="lazy" alt="Character"></div>
+                <div class="character"><img src="images/character.png" loading="lazy" alt="Character"></div>
             </div>
         </main>
     </div>
