--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="description" content="Зареєструйся на курс до відкриття школи та отримай знижку 15%">
+    <meta name="keywords" content="Англійська,Англійська мова,Курси з Англійської мови,Курси">
+    <meta name="author" content="Favorite-English">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Favorite English — подача заявки</title>
     <link rel="stylesheet" href="styles/style.css">
