--- a/index.html
+++ b/index.html
@@ -4,11 +4,14 @@
     <meta charset="UTF-8">
     <meta name="description" content="Зареєструйся на курс до відкриття школи та отримай знижку 15%">
     <meta name="keywords" content="Англійська,Англійська мова,Курси з Англійської мови,Курси">
-    <meta name="author" content="Favorite-English">
+    <meta name="author" content="Favorite English">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <title>Favorite English — подача заявки</title>
+
     <link rel="stylesheet" href="styles/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+    
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 </head>
@@ -77,7 +80,7 @@
             </div>
             <div class="slide">
                 <div class="slide__content">
-                    <img src="images/tree.svg" loading="lazy" alt="Tree" style="width: 28px; height: 29px;">
+                    <img src="images/image 16.svg" loading="lazy" alt="Tree" style="width: 28px; height: 29px;">
                     <span class="slide__title">Англійська для подорожей</span>
                 </div>
                 <p class="slide__subtitle">Легкість у спілкуванні за кордоном: базові фрази, необхідні для аеропорту, готелю та ресторану.</p>
